# rkt

./: .gitignore  .travis.yml  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  MAINTAINERS  Makefile  Makefile.in  NOTICE  README.md  ROADMAP.md  Vagrantfile  actool.mk  autogen.sh  build  circle.yml  configure.ac  depsgentool.mk  gimme.local  glide.yaml  rkt-bs-todo  test  vendoredApps
.github/: ISSUE_TEMPLATE.md
Documentation/: aci-hosting.md  app-container.md  app-environment.md  architecture.md  block-devices.md  build-configure.md  capabilities-guide.md  commands.md  config-format.md  configuration.md  container-lifecycle.md  dependencies.md  distributions.md  getting-started-guide.md  getting-started-ubuntu-trusty.md  getting-started-ubuntu-vivid.md  getting-started-ubuntu.md  hacking.md  image-fetching-behavior.md  install-rkt-in-coreos.md  integrations.md  metadata-service.md  networking.md  packaging.md  pod-lifecycle.md  pod-manifest.md  production-users.md  rkt-build-rkt.md  rkt-vs-other-projects.md  running-docker-images.md  running-fly-stage1.md  running-kvm-stage1.md  running-lkvm-stage1.md  seccomp-guide.md  security.md  selinux.md  signing-and-verification-guide.md  stage1-implementors-guide.md  troubleshooting.md  trying-out-rkt.md  (+3 more)
Documentation/benchmarks/: README.md  rkt-1-4-0-benchmarks.md
Documentation/devel/: architecture.md  cgroups.md  debugging.md  devel.mk  distribution-point.md  distribution_point.md  inspect-containers.md  mutable.dot  on-disk-format.md  pod-lifecycle.md  quickstart-dev.md  release.md  stage1-implementors-guide.md  tpm.md  update-coreos-stage1.md  user-namespaces.md
Documentation/networking/: dns.md  examples-bridge.md  overriding-defaults.md  overview.md
Documentation/performance/: README.md  rkt-1-4-0-benchmarks.md
Documentation/proposals/: app-level-api.md  oci.md
Documentation/subcommands/: api-service.md  cat-manifest.md  config.md  enter.md  export.md  fetch.md  fly.md  gc.md  image.md  install.md  list.md  metadata-service.md  prepare.md  rm.md  run-prepared.md  run.md  status.md  stop.md  trust.md  version.md
Godeps/: Godeps.json
api/v1/: api.pb.go  api.proto  json.go
api/v1_alpha/: api.pb.go  api.proto
api/v1alpha/: README.md  api.pb.go  api.proto  client_example.go
app-container/: README.md  SPEC.md
app-container/aci/: aci.go  (+5 more)
cas/: aciinfo.go  aciinfo_test.go  cas.go  cas_test.go  db.go  remote.go  remote_test.go  schema.go  tree.go  tree_test.go  utils.go  z_last_test.go
cmd/: fetch.go  help.go  rkt.go  run.go  status.go  version.go
common/: common.go  common_test.go  environment.go  environment_test.go  experiment.go  fetch_keys.go  group.go  group_test.go  mount.go
downloadstore/: .gitignore  Makefile  TODO  cas.go  cas_test.go  main.go  remote.go  utils.go
ipmanager/: README.md  allocator.go  config.go  main.go  server.go
lib/: app.go  pod.go  types.go
makelib/: aci_simple_go_bin.mk  aci_simple_static_c_bin.mk  build_go_bin.mk  build_static_c_bin.mk  file-ops-epilog.mk  file-ops-prolog.mk  git-refresh.mk  inc.mk  lib.mk  misc.mk  variables.mk  variables.mk.in  verbosity.mk
metadata/: metadatasvc.go
metadatasvc/: main.go
network/: net-plugin.go  net.go  network.go
networking/: kvm.go  net-plugin.go  net.go  net_plugin.go  networking.go  podenv.go  portfwd.go
path/: path.go
rkt/: api_service.go  api_service_sdjournal.go  api_service_stub.go  api_service_test.go  app.go  app_add.go  app_list.go  app_rm.go  app_sandbox.go  app_start.go  app_status.go  app_stop.go  app_test.go  attach.go  bash_completion_gen.go  cat_manifest.go  cli_apps.go  cli_apps_test.go  completion.go  completion_test.go  config.go  containers.go  containers_test.go  doc.go  enter.go  export.go  fetch.go  fetch_keys.go  fetch_test.go  file.go  gc.go  help.go  image.go  image_cat_manifest.go  image_cmd_common.go  image_export.go  image_extract.go  image_gc.go  image_list.go  image_render.go  (+35 more)
scf/: container.go  eg2sdu.go  init.go  path.go  transform.go
scripts/: acbuild-rkt-builder.sh  build-rir.sh  build-rkt.sh  bump-release  changelog.sh  genproto.sh  glide-update.sh  godep-save  install-common.sh  install-deps-debian-sid.sh  install-deps-fedora-22.sh  install-go.sh  install-rkt.sh  install-rocket.sh  install-vagrant.sh  sort-stage1-manifests.sh
stage0/: .gitignore  app.go  app_add.go  app_rm.go  app_start.go  app_stop.go  arch.go  common.go  enter.go  entrypoint.go  gc.go  gc_test.go  interface.go  kvm.go  log.go  manifest.go  registration.go  rkt.go  run.go  stop.go
stage1/: .gitignore  container.go  default.target  dummy.go  find-so-deps.mk  init.go  mkrootfs.sh  path.go  rootfs.mk  secondary-stuff.mk  shutdown.service  stage1.mk  stdlibdirs.mk  transform.go
stage1_fly/: process-credentials.go  stage1_fly.mk
store/: aciinfo.go  aciinfo_test.go  backup.go  db.go  db_test.go  main_test.go  migrate.go  migrate_test.go  remote.go  remote_test.go  schema.go  store.go  store_test.go  tree.go  tree_test.go  utils.go  utils_test.go
tests/: README.md  aws.sh  build  build-and-run-tests.sh  env_file_test.conf  functional.mk  install-deps.sh  pubring.gpg  rkt_ace_validator_test.go  rkt_api_service_bench_test.go  rkt_api_service_nspawn_test.go  rkt_api_service_test.go  rkt_app_isolator_nspawn_test.go  rkt_app_isolator_test.go  rkt_app_sandbox_test.go  rkt_attach_test.go  rkt_auth_test.go  rkt_caps_kvm_test.go  rkt_caps_nspawn_test.go  rkt_caps_test.go  rkt_cat_manifest_test.go  rkt_config_test.go  rkt_devices_test.go  rkt_diagnostic_test.go  rkt_dns_test.go  rkt_env_test.go  rkt_error_output_test.go  rkt_etc_hosts_test.go  rkt_exec_test.go  rkt_exit_test.go  rkt_export_container_test.go  rkt_export_fly_test.go  rkt_export_test.go  rkt_fetch_test.go  rkt_flavor_coreos.go  rkt_flavor_fly.go  rkt_flavor_host.go  rkt_flavor_kvm.go  rkt_flavor_src.go  rkt_fly_test.go  (+66 more)
tools/: actool.mk  cleangentool.mk  cpu-stresser.mk  deps-gen.pl  depsgentool.mk  filelistgentool.mk  go-deps-gen.pl  libdepsgen.pm  log-stresser.mk  mem-stresser.mk  quickrmtool.mk  rkt-monitor.mk  sleeper.mk  tools.mk
version/: version.go
(+872 files in other folders)
